# aas-submodel-template-to-py

./: README.md  requirements.txt  setup.py
.github/workflows/: publish.yml  regenerate-submodels.yml  release-py-submodels-testpypi.yml  release-py-submodels.yml  release-sm-generator-testpypi.yml  release-sm-generator.yml
aas-sm-to-py/: README.md  pyproject.toml
aas-sm-to-py/aas_sm_to_py/: generator.py  submodel_to_code.py  util.py
aas-sm-to-py/aas_sm_to_py/code_templates/: base_class.pyi  se_col_class.pyi  se_list_class.pyi  submodel_class.pyi
aas-submodel-to-py/: README.md  pyproject.toml
aas-submodel-to-py/aas_submodel_to_py/: __init__.py  generator.py  submodel_to_code.py  util.py
asttp/: generator.py  submodel_to_code.py  util.py
asttp/code_templates/: referable_with_se_class.pyi
generator/: jinja_generator.py  output.py  util.py
generator/code_templates/: base_class.pyi  general.pyi  imports.jinja  referable_with_se_class.pyi  se_col_class.pyi  submodel_class.pyi
py-aas-submodels/: README.md  pyproject.toml  regenerate_submodels.py
py-aas-submodels/py_aas_submodels/: artificial_intelligence_dataset_1-0.py  artificial_intelligence_deployment_1-0-1.py  artificial_intelligence_model_nameplate_1-0.py  asset_interfaces_description_1-0.py  asset_interfaces_description_1-1.py  asset_interfaces_mapping_configuration_1-0-1_1.py  asset_interfaces_mapping_configuration_2-0_1.py  capability_description_1-0.py  carbon_footprint_0-9.py  carbon_footprint_02023_1_0_1.py  carbon_footprint_1-0-1_1.py  contact_information_02002-1-0.py  contact_information_1-0-1_1.py  contact_information_1-0.py  control_component_instance_1-0.py  control_component_instance_2-0.py  control_component_type_02015-1-0.py  control_component_type_1-0.py  control_component_type_2-0-1_1.py  control_configuration_and_parametrization_for_nc_and_cnc_machines_1-0-1.py  control_configuration_and_parametrization_for_nc_and_cnc_machines_1-0.py  creation_and_classification_of_materials_1-0-1.py  data_model_for_asset_location_1-0-1.py  data_retention_policies_1-0-1.py  data_retention_policies_1-0.py  dexpi_1-0.py  digital_battery_passport_1-0-1.py  digital_battery_passport_1-0-1_2.py  digital_battery_passport_1-0-1_3.py  digital_battery_passport_1-0-1_4.py  digital_battery_passport_1-0-1_6.py  digital_battery_passport_1-0.py  digital_battery_passport_1-0_1.py  digital_battery_passport_1-0_10.py  digital_battery_passport_1-0_13.py  digital_battery_passport_1-0_2.py  digital_battery_passport_1-0_4.py  digital_battery_passport_1-0_5.py  digital_battery_passport_1-0_7.py  digital_battery_passport_1-0_8.py  (+63 more)
py-submodels/: pyproject.toml
py-submodels/submodels/: README.md  control_component_instance_02016-1-0.py
sm-generator/: pyproject.toml
sub2py/: __init__.py  generator.py  jinja_generator.py  submodel_to_code.py
sub2py/code_templates/: referable_with_se_class.pyi
submodels/: functional_safety_02014-1-0.py
